added some styles, and changed sample user to R Kelly pirate

--- a/index.html
+++ b/index.html
@@ -6,16 +6,16 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    <link href='https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700|Josefin+Sans:400,400italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
   <h1>HABITUDE PROFILE PAGE</h1>
-    <div id="name"></div>
     <div id="picture"></div>
+    <div id="name"></div>
 
-  <script type="text/jsx" src="components/profileTitle.js">
-
-  // </script>
   <script type="text/jsx" src="components/profilePicture.js"> </script>
+  <script type="text/jsx" src="components/profileTitle.js"></script>
 
 </body>
 </html>
