added sample nav bar near top of page; and added sample logo

--- a/index.html
+++ b/index.html
@@ -10,12 +10,18 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
+  <a href="#/" class="logo">
+      <img src="assets/habitude.png" width="100" alt="reflectiv">
+    </a>
   <h1>HABITUDE PROFILE PAGE</h1>
+    <div id="navbar"></div>
     <div id="picture"></div>
     <div id="name"></div>
 
+
   <script type="text/jsx" src="components/profilePicture.js"> </script>
   <script type="text/jsx" src="components/profileTitle.js"></script>
+  <script type="text/jsx" src="components/sample.js"></script>
 
 </body>
 </html>
