--- a/index.html
+++ b/index.html
@@ -16,11 +16,11 @@
   <h1>HABITUDE PROFILE PAGE</h1>
     <div id="navbar"></div>
     <div id="picture"></div>
-    <div id="name"></div>
+    <div id="nameloc"></div>
 
 
   <script type="text/jsx" src="components/profilePicture.js"> </script>
-  <script type="text/jsx" src="components/profileTitle.js"></script>
+  <script type="text/jsx" src="components/profileNameLoc.js"></script>
   <script type="text/jsx" src="components/sample.js"></script>
 
 </body>
