adding stats and current habitudes elements to profile page

--- a/index.html
+++ b/index.html
@@ -17,11 +17,14 @@
     <div id="navbar"></div>
     <div id="picture"></div>
     <div id="nameloc"></div>
-
+    <div id="mystats"></div>
+    <div id="currenthab"></div>
 
   <script type="text/jsx" src="components/profilePicture.js"> </script>
   <script type="text/jsx" src="components/profileNameLoc.js"></script>
   <script type="text/jsx" src="components/sample.js"></script>
+  <script type="text/jsx" src="components/profileMyStats.js"></script>
+  <script type="text/jsx" src="components/profileCurrentHab.js"></script>
 
 </body>
 </html>
