--- a/index.html
+++ b/index.html
@@ -18,13 +18,22 @@
     <div id="picture"></div>
     <div id="nameloc"></div>
     <div id="mystats"></div>
-    <div id="currenthab"></div>
+    <!-- <table ><thead id="currenthab">Check in for todays goals</thead></table> -->
+    <table id="currenthab"></table> <!-- TODO: fix the damn table -->
+    <div id="habprogress"></div>
+
+
+
+
 
   <script type="text/jsx" src="components/profilePicture.js"> </script>
   <script type="text/jsx" src="components/profileNameLoc.js"></script>
   <script type="text/jsx" src="components/sample.js"></script>
   <script type="text/jsx" src="components/profileMyStats.js"></script>
   <script type="text/jsx" src="components/profileCurrentHab.js"></script>
+  <!-- <script type="text/jsx" src="components/profileAddHab.js"></script> -->
+  <script type="text/jsx" src="components/profileHabProgress.js"></script>
 
 </body>
 </html>
+
