fixed table of current habits

--- a/index.html
+++ b/index.html
@@ -10,17 +10,21 @@
     <link rel="stylesheet" type="text/css" href="styles.css">
 </head>
 <body>
-  <a href="#/" class="logo">
-      <img src="assets/habitude.png" width="100" alt="reflectiv">
-  </a>
-  <h1>HABITUDE PROFILE PAGE</h1>
-    <div id="navbar"></div>
-    <div id="picture"></div>
-    <div id="nameloc"></div>
-    <div id="mystats"></div>
-    <!-- <table ><thead id="currenthab">Check in for todays goals</thead></table> -->
-    <table id="currenthab"></table> <!-- TODO: fix the damn table -->
-    <div id="habprogress"></div>
+
+  <h1>  
+    <img src="assets/habitude.png" width="100" alt="reflectiv">
+    HABITUDE PROFILE PAGE
+  </h1>
+
+  <div id="navbar"></div>
+  <div id="picture"></div>
+  <div id="nameloc"></div>
+  <div id="mystats"></div>
+  <!-- <table ><thead id="currenthab">Check in for todays goals</thead></table> -->
+  <div id="addhab"></div>
+  <div id="currenthab"></div> <!-- TODO: fix the damn table -->
+  <!-- <div id="user_input"></div> -->
+  <div id="habprogress"></div>
 
 
 
@@ -30,6 +34,7 @@
   <script type="text/jsx" src="components/profileNameLoc.js"></script>
   <script type="text/jsx" src="components/sample.js"></script>
   <script type="text/jsx" src="components/profileMyStats.js"></script>
+  <script type="text/jsx" src="components/profileAddHab.js"></script>
   <script type="text/jsx" src="components/profileCurrentHab.js"></script>
   <!-- <script type="text/jsx" src="components/profileAddHab.js"></script> -->
   <script type="text/jsx" src="components/profileHabProgress.js"></script>
