renamed index.js to app.js added requestHandler removed dummy profile page

--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
 
   <script type="text/jsx" src="components/profilePicture.js"> </script>
   <script type="text/jsx" src="components/profileTitle.js"></script>
+  <script type="text/jsx" src="components/addHabit.js"></script>
 
 </body>
 </html>
