fixed order of page elements and reqrote some examples

--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
   <div id="nameloc"></div>
   <div id="mystats"></div>
   <!-- <table ><thead id="currenthab">Check in for todays goals</thead></table> -->
+  <div id="checkincurrenthab"></div> 
   <div id="addhab"></div>
-  <div id="currenthab"></div> <!-- TODO: fix the damn table -->
   <!-- <div id="user_input"></div> -->
   <div id="habprogress"></div>
 
@@ -35,7 +35,7 @@
   <script type="text/jsx" src="components/sample.js"></script>
   <script type="text/jsx" src="components/profileMyStats.js"></script>
   <script type="text/jsx" src="components/profileAddHab.js"></script>
-  <script type="text/jsx" src="components/profileCurrentHab.js"></script>
+  <script type="text/jsx" src="components/profileCheckInCurrentHab.js"></script>
   <!-- <script type="text/jsx" src="components/profileAddHab.js"></script> -->
   <script type="text/jsx" src="components/profileHabProgress.js"></script>
 
