--- a/index.html
+++ b/index.html
@@ -8,11 +8,12 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700|Josefin+Sans:400,400italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type="text/css" href="styles.css">
+    <link rel="icon" type="image/ico" href="/assets/favicon.ico">
 </head>
 <body>
 
   <h1>  
-    <img src="assets/habitude.png" width="100" alt="reflectiv">
+    <img src="assets/habitude_logo.png" width="100" alt="reflectiv">
     HABITUDE PROFILE PAGE
   </h1>
 
