trying to make ajax requests in test files in components folder; added bootstrap and jquery

--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700|Josefin+Sans:400,400italic' rel='stylesheet' type='text/css'>
+    <link rel="stylesheet" type"text/css" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
     <link rel="icon" type="image/ico" href="/assets/favicon.ico">
 </head>
@@ -18,7 +19,7 @@
   </h1>
 
   <div id="navbar"></div>
-  <div id="picture"></div>
+  <div  id="picture"></div>
   <div id="nameloc"></div>
   <div id="mystats"></div>
   <div id="checkincurrenthab"></div> 
@@ -36,6 +37,7 @@
   <script type="text/jsx" src="components/profileAddHab.js"></script>
   <script type="text/jsx" src="components/profileCheckInCurrentHab.js"></script>
   <script type="text/jsx" src="components/profileHabProgress.js"></script>
+  <script type="text/jsx" src="components/testAjax.js"></script>
 
 </body>
 </html>
