--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+    
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700|Josefin+Sans:400,400italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type"text/css" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -34,7 +36,7 @@
   <script type="text/jsx" src="components/profileNameLoc.js"></script>
   <script type="text/jsx" src="components/sample.js"></script>
   <script type="text/jsx" src="components/profileMyStats.js"></script>
-  <script type="text/jsx" src="components/profileAddHab.js"></script>
+  <script type="text/jsx" src="components/testAddDisplayHab.js"></script>
   <script type="text/jsx" src="components/profileCheckInCurrentHab.js"></script>
   <script type="text/jsx" src="components/profileHabProgress.js"></script>
   <script type="text/jsx" src="components/testAjax.js"></script>
