cleaned code for adding stuff to db via post request in text field

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
   <div id="nameloc"></div>
   <div id="mystats"></div>
   <div id="checkincurrenthab"></div> 
-  <div id="addhab"></div>
+  <div id="adddisplayhab"></div>
   <div id="habprogress"></div>
 
 
@@ -36,7 +36,7 @@
   <script type="text/jsx" src="components/profileNameLoc.js"></script>
   <script type="text/jsx" src="components/sample.js"></script>
   <script type="text/jsx" src="components/profileMyStats.js"></script>
-  <script type="text/jsx" src="components/testAddDisplayHab.js"></script>
+  <script type="text/jsx" src="components/profileAddDisplayHab.js"></script>
   <script type="text/jsx" src="components/profileCheckInCurrentHab.js"></script>
   <script type="text/jsx" src="components/profileHabProgress.js"></script>
   <script type="text/jsx" src="components/testAjax.js"></script>
