sample.js file added

--- a/index.html
+++ b/index.html
@@ -28,10 +28,6 @@
   <div id="adddisplayhab"></div>
   <div id="habprogress"></div>
 
-
-
-
-
   <script type="text/jsx" src="components/profilePicture.js"> </script>
   <script type="text/jsx" src="components/profileNameLoc.js"></script>
   <script type="text/jsx" src="components/sample.js"></script>
@@ -39,7 +35,7 @@
   <script type="text/jsx" src="components/profileAddDisplayHab.js"></script>
   <script type="text/jsx" src="components/profileCheckInCurrentHab.js"></script>
   <script type="text/jsx" src="components/profileHabProgress.js"></script>
-  <script type="text/jsx" src="components/testAjax.js"></script>
+   <!-- <script type="text/jsx" src="components/testAjax.js"></script> -->
 
 </body>
 </html>
