added button to update habits

--- a/index.html
+++ b/index.html
@@ -3,11 +3,6 @@
 <head>
     <meta charset="UTF-8" />
     <title>HABITUDE</title>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
-    
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
     <link href='https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700|Josefin+Sans:400,400italic' rel='stylesheet' type='text/css'>
     <link rel="stylesheet" type"text/css" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
     <link rel="stylesheet" type="text/css" href="styles.css">
@@ -21,21 +16,30 @@
   </h1>
 
   <div id="navbar"></div>
-  <div  id="picture"></div>
+  <div id="picture"></div>
   <div id="nameloc"></div>
   <div id="mystats"></div>
   <div id="checkincurrenthab"></div> 
   <div id="adddisplayhab"></div>
   <div id="habprogress"></div>
 
+
+
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
+
   <script type="text/jsx" src="components/profilePicture.js"> </script>
   <script type="text/jsx" src="components/profileNameLoc.js"></script>
-  <script type="text/jsx" src="components/sample.js"></script>
+  <!-- // <script type="text/jsx" src="components/sample.js"></script> -->
   <script type="text/jsx" src="components/profileMyStats.js"></script>
   <script type="text/jsx" src="components/profileAddDisplayHab.js"></script>
   <script type="text/jsx" src="components/profileCheckInCurrentHab.js"></script>
   <script type="text/jsx" src="components/profileHabProgress.js"></script>
+
    <!-- <script type="text/jsx" src="components/testAjax.js"></script> -->
+
 
 </body>
 </html>
