button makes AJAX call

--- a/index.html
+++ b/index.html
@@ -35,8 +35,8 @@
   <!-- // <script type="text/jsx" src="components/sample.js"></script> -->
   <script type="text/jsx" src="components/profileMyStats.js"></script>
   <script type="text/jsx" src="components/profileAddDisplayHab.js"></script>
-  <script type="text/jsx" src="components/profileCheckInCurrentHab.js"></script>
-  <script type="text/jsx" src="components/profileHabProgress.js"></script>
+  <!-- <script type="text/jsx" src="components/profileCheckInCurrentHab.js"></script> -->
+  <!-- // <script type="text/jsx" src="components/profileHabProgress.js"></script> -->
 
    <!-- <script type="text/jsx" src="components/testAjax.js"></script> -->
 
