--- a/client/index.html
+++ b/client/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <title>HABITUDE</title>
     <link href='https://fonts.googleapis.com/css?family=Yanone+Kaffeesatz:400,700|Josefin+Sans:400,400italic' rel='stylesheet' type='text/css'>
-    <link rel="stylesheet" type"text/css" href="./node_modules/bootstrap/dist/css/bootstrap.min.css">
-    <link rel="stylesheet" type="text/css" href="styles.css">
-    <link rel="icon" type="image/ico" href="/assets/favicon.ico">
+    <link rel="stylesheet" type"text/css" href="src/styles/bootstrap.min.css">
+    <link rel="stylesheet" type="text/css" href="src/styles/styles.css">
+    <link rel="icon" type="image/ico" href="src/assets/favicon.ico">
 </head>
 <body>
 
   <h1>  
-    <img src="assets/habitude_logo.png" width="100" alt="reflectiv">
+    <img src="src/assets/habitude_logo.png" width="100" alt="reflectiv">
     HABITUDE PROFILE PAGE
   </h1>
 
@@ -30,11 +30,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
 
-  <script type="text/jsx" src="components/profilePicture.js"> </script>
-  <script type="text/jsx" src="components/profileNameLoc.js"></script>
+  <script type="text/jsx" src="src/components/profilePicture.js"> </script>
+  <script type="text/jsx" src="src/components/profileNameLoc.js"></script>
   <!-- // <script type="text/jsx" src="components/sample.js"></script> -->
-  <script type="text/jsx" src="components/profileMyStats.js"></script>
-  <script type="text/jsx" src="components/profileAddDisplayHab.js"></script>
+  <script type="text/jsx" src="src/components/profileMyStats.js"></script>
+  <script type="text/jsx" src="src/components/profileAddDisplayHab.js"></script>
   <!-- <script type="text/jsx" src="components/profileCheckInCurrentHab.js"></script> -->
   <!-- // <script type="text/jsx" src="components/profileHabProgress.js"></script> -->
 
