set up landing page to be rendered when user wants to log out

--- a/client/index.html
+++ b/client/index.html
@@ -42,7 +42,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="#Logout">Logout</a>
+                        <a class="page-scroll" href="/landing.html">Logout</a>
                     </li>
                 </ul>
             </div>
@@ -72,8 +72,8 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
 
   <script type="text/jsx" src="src/components/profilePicture.js"> </script>
-  <script type="text/jsx" src="src/components/profileNameLoc.js"></script>
-  <script type="text/jsx" src="src/components/sample.js"></script>
+  <!--<script type="text/jsx" src="src/components/profileNameLoc.js"></script>
+  <script type="text/jsx" src="src/components/sample.js"></script>-->
   <script type="text/jsx" src="src/components/profileAddDisplayHab.js"></script>
   <!--<script type="text/jsx" src="src/components/profileMyStats.js"></script>
   <script type="text/jsx" src="components/profileCheckInCurrentHab.js"></script>
