--- a/client/index.html
+++ b/client/index.html
@@ -42,13 +42,13 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/landing.html">Logout</a>
+                        <a class="page-scroll" href="/landing.html">Logout</a> <!--re routes user to the signin/login page-->
                     </li>
                 </ul>
             </div>
-            <!-- /.navbar-collapse -->
+
         </div>
-        <!-- /.container-fluid -->
+
     </nav>
 
 
