--- a/client/profile.html
+++ b/client/profile.html
@@ -42,7 +42,7 @@
                         <a class="page-scroll" href="#about">About</a>
                     </li>
                     <li>
-                        <a class="page-scroll" href="/landing.html">Logout</a> <!--re routes user to the signin/login page-->
+                        <a class="page-scroll" href="/index.html">Logout</a> <!--re routes user to the signin/login page-->
                     </li>
                 </ul>
             </div>
