updating Name/Loc compenent, by adding an AJAX GET call, working successfully

--- a/client/profile.html
+++ b/client/profile.html
@@ -59,8 +59,8 @@
   </div>
 </div>
 
-  <!--<div id="nameloc"></div>
-  <div id="mystats"></div>
+  <div id="nameloc"></div>
+  <!--<div id="mystats"></div>
   <div id="checkincurrenthab"></div> 
   <div id="habprogress"></div>-->
 
@@ -72,10 +72,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
 
   <script type="text/jsx" src="src/components/profilePicture.js"> </script>
-  <!--<script type="text/jsx" src="src/components/profileNameLoc.js"></script>
-  <script type="text/jsx" src="src/components/sample.js"></script>-->
   <script type="text/jsx" src="src/components/profileAddDisplayHab.js"></script>
-  <!--<script type="text/jsx" src="src/components/profileMyStats.js"></script>
+  <script type="text/jsx" src="src/components/profileNameLoc.js"></script>
+  
+  <!--<script type="text/jsx" src="src/components/sample.js"></script>
+  <script type="text/jsx" src="src/components/profileMyStats.js"></script>
   <script type="text/jsx" src="components/profileCheckInCurrentHab.js"></script>
   <script type="text/jsx" src="components/profileHabProgress.js"></script>
 
