changed format on hab progress files

--- a/client/profile.html
+++ b/client/profile.html
@@ -62,7 +62,8 @@
   <div id="nameloc"></div>
   <!--<div id="mystats"></div>
   <div id="checkincurrenthab"></div> 
-  <div id="habprogress"></div>-->
+  <div id="habprogress"></div>
+-->
 
 
 
@@ -78,7 +79,7 @@
   <!--<script type="text/jsx" src="src/components/sample.js"></script>
   <script type="text/jsx" src="src/components/profileMyStats.js"></script>
   <script type="text/jsx" src="components/profileCheckInCurrentHab.js"></script>
-  <script type="text/jsx" src="components/profileHabProgress.js"></script>
+  <script type="text/jsx" src="src/components/profileHabProgress.js"></script>
 
   <script type="text/jsx" src="components/testAjax.js"></script> -->
 
