added drop down menu for categories for habitudes

--- a/client/profile.html
+++ b/client/profile.html
@@ -54,7 +54,7 @@
 
 <div class="container">
   <div class="row">
-    <div class="col-md-3 no-float" id="picture"></div>
+    <div class="col-md-3 no-float" id="picnameloc"></div>
     <div class="col-md-9 no-float" id="adddisplayhab"></div>
   </div>
 </div>
@@ -66,12 +66,13 @@
 
 
 
+
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/react.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/react/0.13.3/JSXTransformer.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/marked/0.3.2/marked.min.js"></script>
 
-  <script type="text/jsx" src="src/components/profilePicture.js"> </script>
+  <script type="text/jsx" src="src/components/profilePicNameLoc.js"> </script>
   <script type="text/jsx" src="src/components/profileAddDisplayHab.js"></script>
   
   <!--<script type="text/jsx" src="src/components/sample.js"></script>
